message for contacts request, update doc
